@@ -1,0 +1,8 @@
+! TYPEDSTREAM 1.1
+
+source {
+	studyname "reference"
+}
+source {
+	studyname "floating"
+}
