@@ -1,0 +1,13 @@
+! TYPEDSTREAM 1.1
+
+registration {
+	reference_study "reference"
+	floating_study "floating"
+	affine_xform {
+		xlate -6.829083737 5.02958 -49.4534029 
+		rotate 2.042602539 -1.643649101 -1.873982191 
+		scale 1.000002631 1.000000091 1.000003352 
+		shear 1.700816049e-08 1.836029964e-08 1.087756999e-08 
+		center -21.17091626 -53.02958 21.4534029 
+	}
+}
